...
          key: _formKey,
          child: Padding(
            padding: const EdgeInsets.all(8.0),
            child: Column(
              children: [
                TextFormField(
                  key: const ValueKey("loginmail"),
                  keyboardType: TextInputType.emailAddress,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(borderRadius: BorderRadius.all(Radius.circular(15))),
                    icon: Icon(Icons.email, color: Colors.deepPurple[400]),
                    hintText: 'Enter Your Email',
                    labelText: 'Email',
...
                    }
                    return null;
                  },
                ),
                SizedBox(height: 20),
                TextFormField(
                  key: const ValueKey("loginpassword"),
                  obscureText: true,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(borderRadius: BorderRadius.all(Radius.circular(15))),
                    icon: Icon(Icons.key, color: Colors.deepPurple[400]),
                    hintText: 'Do not Share it!',
                    labelText: 'Password',
...
                  style: ElevatedButton.styleFrom(
                    shape: RoundedRectangleBorder(borderRadius: BorderRadius.circular(15.0)),
                    //change width and height on your need width = 200 and height = 50
                    minimumSize: Size(250, 50),
                  ),
                  icon: const Icon(Icons.login),
                  key: const ValueKey("signInButton"),
                  label: Text("Sign In"),
                  onPressed: () {
                    // Validate returns true if the form is valid, or false otherwise.
                    if (_formKey.currentState!.validate()) {
                      signIn(_email.text, _password.text);
                    }
...
                                    );
                                  } catch (e) {}

                                  Navigator.pop(context);
                                }
                              },
                              child: Text('Submit'))
                        ],
                      ),
                    )
                  },
                  child: Text("Forgot Password?"),
                ),
...
