...
      resizeToAvoidBottomInset: false,
      floatingActionButton: Column(
        mainAxisAlignment: MainAxisAlignment.end,
        children: [
          if (selectedNote != null && selectedNote!.author.uid == userID)
            FloatingActionButton(
              key: Key("editNoteButton"),
              heroTag: "btn1",
              onPressed: () {
                debugPrint("FloatingActionButton EDIT pressed");
                context.push("/courses/reviews/modifyNote", extra: selectedNote).then((value) => refresh());
              },
              child: Icon(Icons.edit_document),
            ),
          SizedBox(height: 15),
          FloatingActionButton(
            key: Key("addNoteButton"),
            heroTag: "btn2",
            onPressed: () {
              debugPrint("FloatingActionButton ADD pressed");
              context.push("/courses/reviews/newNote", extra: widget.course).then((_) => setState(() {
                    NoteList = widget.db.getNotes(widget.course, selecteddateOrder, selecteddPrivacy);
                  }));
...
