...
              },
            ),
          ],
          bottom: const TabBar(
            tabs: [
              Tab(icon: Text("✅ Review")),
              Tab(icon: Text("📚 Notes")),
            ],
          ),
          title: Text(course.name),
        ),
        body: TabBarView(
          physics: const NeverScrollableScrollPhysics(),
...
